- Renamed the main module from "cvt" to "tracker". Removed submodule "Analysis". Moved submodules in "TrAQ" directly into "tracker". - "Track.ipynb": logging output (to stdout or to a log file) is now handled by the logging module, with some convenience functions in "tracker.utils". - Streamlined "Track.ipynb".

--- a/Link_Data.ipynb
+++ b/Link_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from glob import glob\n",
     "\n",
     "src_dir  = '../tracking/full_20-07-14'\n",
-    "link_dir = '../data_links'"
+    "link_dir = '../links'"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig_names = [ 'dwall__histogram.png', 'trajectories.png', 'ang_v__histogram.png', \n",
     "              'valid_fraction.png', 'distance-angle__2d-histogram.png', \n",
-    "              'angle-vs-time.png', 'v__histogram.png' ]\n",
+    "              'angle-vs-time.png', 'v__histogram.png', 'polar-order-vs-distance.png' ]\n",
     "\n",
     "for fig_name in fig_names:\n",
     "\n",
