- Updated tank class (and its use in tracker) to allow non-circular tank shapes. During interactive tank detection, selecting one point looks for a connected region around that point that is within a color-difference-threshold of that point (the threshold is modifiable with keys 0, -, and +), then expands the region by dilation (dilation radius set with keys [ and ]). Selecting two points creates a rectangular tank. Selecting three points creates a circular tank. Selecting four or more points creates a polygonal tank.
- Reading the tracking output "trial.pik" now only requires numpy and pickle. The tank object, which used to require the tracker module, is now saved as a dictionary inside "trial.pik".

- Reorganized tracker initialization to make it easier to perform partial initialization. First detect the background, then detect the tank using the background image. Downside: when processing lots of videos at ounce, you now have to wait for the background detection to finish before the interactive tank detection window pops up. To address that, "Track.ipynb" now computes every video's background in one cell, then uses those pre-computed backgrounds to run interactive tank detection on every video in the next cell.

- The tracker now outputs the aspect ratio as well as (position, angle, area).

- The tracker now keeps track of n_extra additional contours. The goal is to be able to fix situations in which the tracker looses a fish and starts tracking a spurious contour instead, after the fact, without retracking.

--- a/Report_Progress.ipynb
+++ b/Report_Progress.ipynb
@@ -46,38 +46,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "66"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# trial_dirs = sorted(glob('../tracking/full_20-07-19_2/*'))\n",
-    "trial_dirs = sorted(glob('output2/*'))\n",
+    "trial_dirs = sorted(glob('../tracking/full_20-10-06/Pa*4dpf*'))\n",
     "len(trial_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "complete             Pa_Fri_14dpf_GroupA_n2_0000\n"
+      "complete             Pa_Fri_14dpf_GroupA_n2_20200612_1400\n",
+      "complete             Pa_Fri_14dpf_GroupA_n2b_20200612_1300_10FPS\n",
+      "complete             Pa_Fri_14dpf_GroupA_n2b_20200612_1400\n",
+      "complete             Pa_Fri_14dpf_GroupB_n2_20200612_1430\n",
+      "complete             Pa_Fri_14dpf_GroupB_n2b_20200612_1430\n",
+      "complete             Pa_Fri_14dpf_GroupC_n2_20200612_1515\n",
+      "complete             Pa_Fri_14dpf_GroupC_n2b_20200612_1515\n",
+      "complete             Pa_Fri_14dpf_GroupD_n2_20200612_1600\n",
+      "complete             Pa_Fri_14dpf_GroupD_n2b_20200612_1600\n",
+      "complete             Pa_Fri_14dpf_groupA_n5_20200612_1300_10FPS\n",
+      "complete             Pa_Fri_14dpf_groupB_n5_20200612_1430\n",
+      "complete             Pa_Fri_14dpf_groupC_n5_20200612_1515\n",
+      "complete             Pa_Fri_14dpf_groupD_n5_20200612_1600\n",
+      "complete             Pa_Fri_84dpf_GroupA_n2_20200821_1304\n",
+      "complete             Pa_Fri_84dpf_GroupA_n2b_20200821_1304\n",
+      "complete             Pa_Fri_84dpf_GroupA_n5_20200821_1304\n",
+      "complete             Pa_Fri_84dpf_GroupB_n1_20200821_1415\n",
+      "complete             Pa_Fri_84dpf_GroupB_n1c_20200821_1415\n",
+      "complete             Pa_Fri_84dpf_GroupB_n2_20200821_1340\n",
+      "complete             Pa_Fri_84dpf_GroupB_n2b_20200821_1340\n",
+      "complete             Pa_Fri_84dpf_GroupB_n5_20200821_1340\n",
+      "complete             Pa_Fri_84dpf_GroupC_n1_20200821_1450\n",
+      "complete             Pa_Fri_84dpf_GroupC_n2_20200821_1450\n",
+      "failed               Pa_Fri_84dpf_GroupC_n5_20200821_1450\n",
+      "complete             Pa_Mon_14dpf_GroupA_n1a_20200713_1725\n",
+      "complete             Pa_Mon_14dpf_GroupA_n1b_20200713_1725\n",
+      "complete             Pa_Mon_14dpf_GroupA_n1c_20200713_1725\n",
+      "complete             Pa_Mon_14dpf_GroupA_n2_20200713_1650\n",
+      "complete             Pa_Mon_14dpf_GroupA_n2b_20200713_1650\n",
+      "complete             Pa_Mon_14dpf_GroupA_n5_20200713_1650\n",
+      "complete             Pa_Mon_14dpf_GroupD_n1a_20200713_1830\n",
+      "complete             Pa_Mon_14dpf_GroupD_n1b_20200713_1830\n",
+      "complete             Pa_Mon_14dpf_GroupD_n1c_20200713_1830\n",
+      "complete             Pa_Mon_14dpf_GroupD_n2a_20200713_1800\n",
+      "complete             Pa_Mon_14dpf_GroupD_n2b_20200713_1800\n",
+      "complete             Pa_Mon_14dpf_GroupD_n5_20200713_1800\n",
+      "complete             Pa_Sun_14dpf_GroupA_n1a_20200621_1600\n",
+      "complete             Pa_Sun_14dpf_GroupA_n1b_20200621_1600\n",
+      "complete             Pa_Sun_14dpf_GroupA_n2a_20200621_1530\n",
+      "complete             Pa_Sun_14dpf_GroupA_n2b_20200621_1525\n",
+      "complete             Pa_Sun_14dpf_GroupA_n2c_20200621_1600\n",
+      "complete             Pa_Sun_14dpf_GroupA_n5_20200621_1525\n",
+      "complete             Pa_Sun_14dpf_GroupB_n1_20200621_1445\n",
+      "complete             Pa_Sun_14dpf_GroupB_n2a_20200621_1410\n",
+      "complete             Pa_Sun_14dpf_GroupB_n2b_20200621_1410\n",
+      "complete             Pa_Sun_14dpf_GroupB_n2c_20200621_1445\n",
+      "complete             Pa_Sun_14dpf_GroupB_n5a_20200621_1410\n",
+      "complete             Pa_Sun_14dpf_GroupB_n5b_20200621_1445\n",
+      "complete             Pa_Sun_14dpf_GroupC_n1a_20200621_1330\n",
+      "complete             Pa_Sun_14dpf_GroupC_n1b_20200621_1600\n",
+      "complete             Pa_Sun_14dpf_GroupC_n2a_20200621_1255\n",
+      "complete             Pa_Sun_14dpf_GroupC_n2b_20200621_1255\n",
+      "complete             Pa_Sun_14dpf_GroupC_n5a_20200621_1255\n",
+      "complete             Pa_Sun_14dpf_GroupC_n5b_20200621_1330\n",
+      "complete             Pa_Sun_84dpf_ GroupAa_n2b_20200830_1330\n",
+      "complete             Pa_Sun_84dpf_GroupAa_n2_20200830_1330\n",
+      "complete             Pa_Sun_84dpf_GroupAa_n5_20200830_1330\n",
+      "complete             Pa_Sun_84dpf_GroupAb_n1_20200830_1300\n",
+      "complete             Pa_Sun_84dpf_GroupAb_n2_20200830_1300\n",
+      "tracking (87.9%)     Pa_Sun_84dpf_GroupAb_n5_20200830_1300\n",
+      "complete             Pa_Sun_84dpf_GroupBa_n2_20200830_1410\n",
+      "complete             Pa_Sun_84dpf_GroupBa_n2b_20200830_1410\n",
+      "complete             Pa_Sun_84dpf_GroupBa_n5_20200830_1410\n",
+      "complete             Pa_Sun_84dpf_GroupBb_n1_20200830_1215\n",
+      "tracking (90.0%)     Pa_Sun_84dpf_GroupBb_n2_20200830_1215\n",
+      "no log               Pa_Sun_84dpf_GroupBb_n5_20200830_1215\n"
      ]
     }
    ],
@@ -86,7 +150,7 @@
     "    try:\n",
     "        globals().update(get_info(trial_dir))\n",
     "#         if status == 'complete':\n",
-    "# #         if 'tracking' not in status:\n",
+    "#         if 'tracking' not in status:\n",
     "#             continue\n",
     "        print(f'{status:20s} {name}')\n",
     "    except:\n",
@@ -95,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'no log': 0, 'tracking': 0, 'complete': 1, 'failed': 0}"
+       "{'no log': 1, 'tracking': 2, 'complete': 62, 'failed': 1}"
       ]
      },
      "metadata": {},
