--- a/Track.ipynb
+++ b/Track.ipynb
@@ -21,13 +21,13 @@
     "import cv2\n",
     "from converter import Converter\n",
     "\n",
-    "# import tracker\n",
-    "# reload(tracker.utils)\n",
-    "# from tracker.utils import *\n",
-    "# reload(tracker.tank)\n",
-    "# from tracker.tank import Tank\n",
-    "# reload(tracker.tracker)\n",
-    "# from tracker.tracker import Tracker"
+    "import tracker\n",
+    "reload(tracker.utils)\n",
+    "from tracker import utils\n",
+    "reload(tracker.tank)\n",
+    "from tracker.tank import Tank\n",
+    "reload(tracker.tracker)\n",
+    "from tracker.tracker import Tracker"
    ]
   },
   {
@@ -39,20 +39,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/google-drive/Pa_Fri_14dpf_GroupA_n2_0000.avi\n",
-      "    {'output_dir': 'output2/Pa_Fri_14dpf_GroupA_n2_0000', 'n_ind': 2}\n"
+      "1\n"
      ]
     }
    ],
    "source": [
     "''' Select input files to track and an output directory for each. '''\n",
     "\n",
-    "tracking_dir = 'output2'\n",
+    "# tracking_dir = '../tracking/full_20-10-06'\n",
+    "# tracking_dir = '../tracking/test_20-10-04'\n",
+    "tracking_dir = 'output_data2'\n",
     "\n",
-    "input_files = sorted(glob('../raw_videos/google-drive/*.avi'))[:1]\n",
-    "\n",
-    "# print(len(input_files))\n",
-    "# display(input_files)\n",
+    "# input_files = sorted(glob('../raw_videos/*.avi')) #[:2]\n",
+    "# input_files = sorted(glob('../raw_videos/Pa_*_*4dpf_*.avi')) #[:2]\n",
+    "# input_files = [ '../raw_videos/Pa_Fri_84dpf_GroupA_n2b_20200821_1304.avi' ]\n",
+    "# input_files = [ 'input_data/Pa_Fri_84dpf_GroupC_n5_20200821_1450.avi' ]\n",
+    "# input_files = [ '../raw_videos/Pa_Fri_84dpf_GroupC_n5_20200821_1450.avi' ]\n",
+    "input_files = [ '../raw_videos/SF_Sat_14dpf_GroupA_n5_2020-06-13-120445-0000.avi' ]\n",
     "\n",
     "input_dict = {}\n",
     "for input_file in input_files:\n",
@@ -65,15 +68,17 @@
     "    repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
     "    input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
     "    \n",
-    "    # If a trial file already exists, skip.\n",
-    "    if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
-    "        continue\n",
+    "#     # If a trial file already exists, skip.\n",
+    "#     if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
+    "#         continue\n",
     "        \n",
     "    input_dict[input_file] = dict( output_dir=output_dir, n_ind=n_ind )\n",
     "\n",
-    "for f,D in input_dict.items():\n",
-    "    print(f)\n",
-    "    print('   ',D)"
+    "print(len(input_dict))\n",
+    "\n",
+    "# for f,D in input_dict.items():\n",
+    "#     print(f)\n",
+    "#     print('   ',D)"
    ]
   },
   {
@@ -82,7 +87,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Create output directories. Trace tanks. '''\n",
+    "''' Create output directories. Compute backgrounds. '''\n",
+    "\n",
+    "settings = dict(\n",
+    "    # Background subtraction (for naive background subtraction only).\n",
+    "    bkgSub_options   = dict( n_training_frames = 100, # number of frames used to compute background\n",
+    "                             t_start = 0, t_end = -1, # time range used to compute background\n",
+    "                             contrast_factor = 4 ),   # post-subtraction contrast enhancement factor\n",
+    "    )\n",
     "\n",
     "for input_file,D in input_dict.items():\n",
     "    tracker = Tracker(input_video=input_file, **D)\n",
@@ -91,56 +103,106 @@
     "    tracker.init_directory()\n",
     "    \n",
     "    # Create a link to the input video in the output directory.\n",
+    "    output_dir = D['output_dir']\n",
     "    input_shortcut = os.path.join(output_dir,'raw'+ext)\n",
-    "    if not 'windows' in platform.system().lower() and not os.path.exists(input_shortcut):\n",
+    "#     if not 'windows' in platform.system().lower() and not os.path.exists(input_shortcut):\n",
+    "    try:\n",
     "        os.symlink(os.path.relpath(input_file,output_dir),input_shortcut)\n",
+    "    except:\n",
+    "        pass\n",
     "        \n",
-    "    # Trace or load tank.\n",
-    "    tracker.init_tank()"
+    "    # Detect background.\n",
+    "    tracker.init_video_input()\n",
+    "    tracker.bkgSub_options = settings['bkgSub_options']\n",
+    "    tracker.init_background()\n",
+    "    tracker.release()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Trace tanks. '''\n",
+    "\n",
+    "for input_file,D in input_dict.items():\n",
+    "    tracker = Tracker(input_video=input_file, **D)\n",
+    "    tracker.init_background()\n",
+    "    tracker.release()\n",
+    "    tracker.init_tank(thresh=8,dilate=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../raw_videos/google-drive/Pa_Fri_14dpf_GroupA_n2_0000.avi\n",
-      "     Done                                                                       "
+      "../raw_videos/SF_Sat_14dpf_GroupA_n5_2020-06-13-120445-0000.avi\n",
+      "     Done                                                                                                                                                                                               "
      ]
     }
    ],
    "source": [
-    "settings = dict(\n",
+    "import tracker\n",
+    "reload(tracker.utils)\n",
+    "from tracker import utils\n",
+    "reload(tracker.tank)\n",
+    "from tracker.tank import Tank\n",
+    "reload(tracker.tracker)\n",
+    "from tracker.tracker import Tracker\n",
+    "\n",
+    "settings.update(dict(\n",
     "    t_start          = 0,     # Time at which to start tracking, in seconds.\n",
-    "    t_end            = 3,    # Time at which to end tracking, in seconds.\n",
+    "    t_end            = -1,    # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
     "    n_pixel_blur     =  7,    # square-root of n-pixels for threshold blurring\n",
     "    block_size       = 15,    # contour block size\n",
-    "    threshold_offset = 13, # threshold offset for contour-finding\n",
+    "    threshold_offset = 13,    # threshold offset for contour-finding\n",
     "    min_area         = 30,    # minimum area for detection\n",
     "    max_area         = 400,   # maximum area for detection\n",
-    "    ideal_area       = 50,    # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
-    "    max_aspect       = 20,    # maximum aspect ratio for detection\n",
+    "    ideal_area       = 100,   # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
+    "    max_aspect       = 15,    # maximum aspect ratio for detection\n",
     "    ideal_aspect     = 3,     # ideal aspect ratio to rank contours in first frame (default=max_aspect/2)\n",
     "    area_penalty     = 0.5,   # weight of area change when connecting fish across frames\n",
+    "    n_extra          = 2,     # number of extra contours to keep track of\n",
+    "    morph_transform  = [], \n",
+    "#     morph_transform  = [(cv2.MORPH_OPEN,2),(cv2.MORPH_CLOSE,2)], \n",
+    "#     morph_transform  = [(cv2.MORPH_CLOSE,20),(cv2.MORPH_OPEN,3)], \n",
+    "#     morph_transform  = [(cv2.MORPH_DILATE,5),(cv2.MORPH_OPEN,8)], \n",
+    "                              # sequence of morphological operations to perform\n",
+    "                              # on thresholded image before extracting contours.\n",
     "    reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
-    "                            # over the last few frames to trigger a reversal. \n",
+    "                              # over the last few frames to trigger a reversal. \n",
     "    live_preview     = False, # Toggle live preview of tracking.\n",
     "\n",
-    "    # Background subtraction (for naive background subtraction only).\n",
-    "    bkgSub_options   = dict( n_training_frames = 100, # number of frames used to compute background\n",
-    "                             t_start = 0, t_end = -1, # time range used to compute background\n",
-    "                             contrast_factor = 4 ),   # post-subtraction contrast enhancement factor\n",
+    "#     # Background subtraction (for naive background subtraction only).\n",
+    "#     bkgSub_options   = dict( n_training_frames = 100, # number of frames used to compute background\n",
+    "#                              t_start = 0, t_end = -1, # time range used to compute background\n",
+    "#                              contrast_factor = 4 ),   # post-subtraction contrast enhancement factor\n",
     "    \n",
     "    # What information to draw on the tracking output video.\n",
-    "    video_output_options = dict( tank=True, points=False, directors=True, timestamp=True, \n",
-    "                                 contours=True, contour_color=(100,255,0), contour_thickness=1 )\n",
-    "    )\n",
+    "    video_output_options = dict( tank=True, points=False, directors=True, \n",
+    "                                 extra_points=True, timestamp=True, \n",
+    "                                 contours=True, contour_color=(100,255,0), \n",
+    "                                 contour_thickness=1 )\n",
+    "    ))\n",
     "\n",
     "def track(input_file):\n",
     "    \n",
@@ -178,7 +240,7 @@
     "                tracker.detect_contours()\n",
     "                tracker.connect_frames()\n",
     "                if b:\n",
-    "#                         cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2_masked.png'),tracker.frame)\n",
+    "#                     cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2_masked.png'),tracker.frame)\n",
     "                    video_output_options.update(directors=False)\n",
     "                    tracker.draw(**video_output_options)\n",
     "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-3_contours.png'),tracker.frame)\n",
@@ -208,31 +270,106 @@
     "n_threads = 1 if 'windows' in platform.system().lower() else 1\n",
     "\n",
     "if n_threads==1:\n",
-    "\n",
+    "    \n",
     "    for input_file in input_dict.keys():\n",
     "        utils.reset_logging()\n",
     "        utils.add_log_stream(sys.stdout)\n",
     "        logging.info(input_file)\n",
     "        handler = logging.root.handlers[-1]\n",
     "        handler.terminator = ''\n",
-    "        handler.setFormatter(logging.Formatter('\\r'+' '*80+'\\r     %(message)s'))\n",
+    "        handler.setFormatter(logging.Formatter('\\r'+' '*200+'\\r     %(message)s'))\n",
     "        track(input_file)\n",
+    "        break\n",
     "    \n",
     "else:\n",
-    "    \n",
-    "    utils.reset_logging()\n",
+    "    def track_(k):\n",
+    "        utils.reset_logging()\n",
+    "        return track(k)\n",
     "    pool = multiprocessing.Pool(n_threads)\n",
-    "    pool.map(track,input_dict.keys())"
+    "    pool.map(track_,input_dict.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv2.destroyAllWindows()"
+    "input_dict.keys()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file,D = next(iter(input_dict.items()))\n",
+    "trial_file   = Tracker(input_video=input_file, **D).trial_file\n",
+    "with open(trial_file,'rb') as f:\n",
+    "    trial = pickle.load(f)\n",
+    "print(trial.keys())\n",
+    "\n",
+    "xy = trial['data'][:,:trial['n_ind'],:2]\n",
+    "xy[:,0,:].shape\n",
+    "for i in range(xy.shape[1]):\n",
+    "    plt.plot(*xy[:,i,:].T,label=f'{i}')\n",
+    "plt.legend(loc=(1.05,0.5))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tracker\n",
+    "reload(tracker)\n",
+    "import tracker.analyze as analyze\n",
+    "reload(tracker.analyze)\n",
+    "\n",
+    "input_file,D = next(iter(input_dict.items()))\n",
+    "trial_file   = Tracker(input_video=input_file, **D).trial_file\n",
+    "trial        = analyze.load_trial(trial_file)\n",
+    "globals().update(trial)\n",
+    "\n",
+    "for i in range(n_ind):\n",
+    "    plt.plot(df[(i,'x_px')],df[(i,'y_px')],label=f'{i}')\n",
+    "plt.legend(loc=(1.05,0.5))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for input_file,D in input_dict.items():\n",
+    "    \n",
+    "    tracker = Tracker(input_video=input_file, **D)\n",
+    "    with open(tracker.trial_file,'rb') as f:\n",
+    "        trial = pickle.load(f)\n",
+    "\n",
+    "    # area\n",
+    "    plt.plot(trial['data'][:,:,3])\n",
+    "    plt.ylim(0,None)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # aspect ratio\n",
+    "    plt.plot(trial['data'][:,:,4])\n",
+    "    plt.ylim(1,None)\n",
+    "    plt.show()\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
