- "tracker.py": Added secondary background subtraction. The previous background subtraction assumed the background was fully static. In reality the darkness of the edge of the tank always ends up changing. This creates a dark outline after background subtraction which often messes with the detection algorithm. The secondary background subtraction circumvents this by computing the average absolute value of the difference between the video and the background, and removing that from the each frame.
- "tracker.py": Improved linear assignment with missing fish.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -87,13 +87,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tracker\n",
+    "reload(tracker.utils)\n",
+    "from tracker import utils\n",
+    "reload(tracker.tank)\n",
+    "from tracker.tank import Tank\n",
+    "reload(tracker.tracker)\n",
+    "from tracker.tracker import Tracker\n",
+    "\n",
+    "\n",
     "''' Create output directories. Compute backgrounds. '''\n",
     "\n",
     "settings = dict(\n",
+    "    threshold_offset = 13,    # threshold offset for contour-finding\n",
     "    # Background subtraction (for naive background subtraction only).\n",
     "    bkgSub_options   = dict( n_training_frames = 100, # number of frames used to compute background\n",
     "                             t_start = 0, t_end = -1, # time range used to compute background\n",
-    "                             contrast_factor = 4 ),   # post-subtraction contrast enhancement factor\n",
+    "                             contrast_factor = 4,     # post-subtraction contrast enhancement factor\n",
+    "                             secondary_subtraction = True )\n",
     "    )\n",
     "\n",
     "for input_file,D in input_dict.items():\n",
@@ -113,8 +124,10 @@
     "        \n",
     "    # Detect background.\n",
     "    tracker.init_video_input()\n",
-    "    tracker.bkgSub_options = settings['bkgSub_options']\n",
+    "    tracker.bkgSub_options   = settings['bkgSub_options']\n",
+    "    tracker.offset           = settings['threshold_offset']\n",
     "    tracker.init_background()\n",
+    "    tracker.init_secondary_background()\n",
     "    tracker.release()"
    ]
   },
@@ -144,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -168,8 +181,8 @@
     "from tracker.tracker import Tracker\n",
     "\n",
     "settings.update(dict(\n",
-    "    t_start          = 0,     # Time at which to start tracking, in seconds.\n",
-    "    t_end            = -1,    # Time at which to end tracking, in seconds.\n",
+    "    t_start          = 300,     # Time at which to start tracking, in seconds.\n",
+    "    t_end            = 305,    # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
     "    n_pixel_blur     =  7,    # square-root of n-pixels for threshold blurring\n",
@@ -192,11 +205,6 @@
     "                              # over the last few frames to trigger a reversal. \n",
     "    live_preview     = False, # Toggle live preview of tracking.\n",
     "\n",
-    "#     # Background subtraction (for naive background subtraction only).\n",
-    "#     bkgSub_options   = dict( n_training_frames = 100, # number of frames used to compute background\n",
-    "#                              t_start = 0, t_end = -1, # time range used to compute background\n",
-    "#                              contrast_factor = 4 ),   # post-subtraction contrast enhancement factor\n",
-    "    \n",
     "    # What information to draw on the tracking output video.\n",
     "    video_output_options = dict( tank=True, points=False, directors=True, \n",
     "                                 extra_points=True, timestamp=True, \n",
@@ -214,6 +222,7 @@
     "    logging.info(utils.parindent+'Initializing')\n",
     "    tracker = Tracker( input_video=input_file, **input_dict[input_file], **settings )\n",
     "    tracker.init_all()\n",
+    "    tracker.init_secondary_background()\n",
     "    tracker.save_settings()\n",
     "\n",
     "    frames_dir = os.path.join(output_dir,'frames')\n",
@@ -234,8 +243,13 @@
     "                if b:\n",
     "                    if not os.path.exists(frames_dir):\n",
     "                        os.mkdir(frames_dir)\n",
-    "#                     cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
+    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-1_raw.png'),tracker.frame)\n",
     "                tracker.subtract_background()\n",
+    "                if b:\n",
+    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2a_bkg-subtracted.png'),tracker.frame)\n",
+    "                tracker.subtract_secondary_background()\n",
+    "                if b:\n",
+    "                    cv2.imwrite(os.path.join(frames_dir,f'{tracker.frame_num}-2b_bkg2-subtracted.png'),tracker.frame)\n",
     "                tracker.mask_tank()\n",
     "                tracker.detect_contours()\n",
     "                tracker.connect_frames()\n",
